--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -1,10 +1,10 @@
 <!--
 Program name: patient-form.html
-Author: YOUR NAME (UH roster)
+Author: Jacob Richard Estrada
 Date created: 02/26/2026
 Date last edited: 02/27/2026
 Version: 1.0
-Description: Patient registration form to collect demographic and account data (HW1).
+Description: Form for patient registration to gather account and demographic information (HW1).
 -->
 
 <!DOCTYPE html>
