--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -3,8 +3,8 @@ Program name: patient-form.html
 Author: Jacob Richard Estrada
 Date created: 02/26/2026
 Date last edited: 02/27/2026
-Version: 1.0
-Description: Form for patient registration to gather account and demographic information (HW1).
+Version: 2.0
+Description: Form for patient registration to gather account and demographic information. 
 -->
 
 <!DOCTYPE html>
@@ -12,7 +12,7 @@ Description: Form for patient registration to gather account and demographic inf
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Patient Registration - We'R'Docs Medical</title>
+  <title>Patient Registration - Gulfstone Medical</title>
 
   <link rel="stylesheet" href="style.css" />
 
@@ -29,22 +29,22 @@ Description: Form for patient registration to gather account and demographic inf
 </head>
 
 <body>
-  <!-- ===================== HEADER / BANNER ===================== -->
+  <!-- ========================================= -->
   <div id="banner">
     <div class="banner-left">
       <!-- Put your uploaded logo in the same folder -->
-      <img src="logo.png" alt="We'R'Docs Medical logo" class="logo" />
+      <img src="logo.png" alt="Gulfstone logo" class="logo" />
     </div>
     <div class="banner-right">
-      <h1>We'R'Docs Medical</h1>
+      <h1>Gulfstone Medical</h1>
       <p>Today is: <span id="todayDate"></span></p>
     </div>
   </div>
 
-  <!-- ===================== MAIN CONTENT ===================== -->
+  <!-- ===================== MAIN ===================== -->
   <div id="main">
     <h2>Patient Registration Form</h2>
-    <p class="subtitle">Please complete the form below to create your account and register as a new patient.</p>
+    <p class="subtitle">Create a Gulfstone Medical patient portal account to sign up for your first appointment.</p>
 
     <form action="thankyou.html">
       <!-- Use TABLE layout as required -->
@@ -184,13 +184,13 @@ Description: Form for patient registration to gather account and demographic inf
   <!-- ===================== FOOTER ===================== -->
   <div id="footer">
     <div class="footer-left">
-      <strong>We'R'Docs Medical</strong><br />
+      <strong>Gulfstone Medical</strong><br />
       PO BOX 18881<br />
-      Sugar Land, TX 77496
+      Houston, TX 77030
     </div>
 
     <div class="footer-center">
-      <button type="button" class="btn footer-btn" onclick="alert('Contact Us: support@werdocs.example')">
+      <button type="button" class="btn footer-btn" onclick="alert('Contact Us: support@Gulfstonemedical.com')">
         Contact Us
       </button>
     </div>
