--- a/homework1/thankyou.html
+++ b/homework1/thankyou.html
@@ -52,11 +52,11 @@ Description: Confirmation page shown after submitting the patient registration f
       </button>
     </div>
 
-    <div class="footer-right">
-      <a href="https://twitter.com" target="_blank" rel="noopener">Twitter</a> |
-      <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
-    </div>
+  <div class="footer-right">
+    <a href="https://x.com" target="_blank" rel="noopener">X</a> |
+    <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
   </div>
+</div>
 
   <!-- End of thankyou.html -->
 </body>
