--- a/homework1/thankyou.html
+++ b/homework1/thankyou.html
@@ -57,6 +57,24 @@ Description: Confirmation page shown after submitting the patient registration f
     <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
   </div>
 </div>
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#main {
+  flex: 1;   /* pushes footer to bottom */
+}
+
+#footer {
+  width: 100%;
+}
 
   <!-- End of thankyou.html -->
 </body>
