--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -173,7 +173,7 @@ Description: Form for patient registration to gather account and demographic inf
   <div id="footer">
     <div class="footer-left">
       <strong>Gulfstone Medical</strong><br />
-      PO BOX 18881<br />
+      1234 Main St, Suite 200<br />
       Houston, TX 77030
     </div>
 
