--- a/homework1/thankyou.html
+++ b/homework1/thankyou.html
@@ -42,7 +42,7 @@ Description: Confirmation page shown after submitting the patient registration f
   <div id="footer">
     <div class="footer-left">
       <strong>Gulfstone Medical</strong><br />
-      PO BOX 18881<br />
+      1234 Main St, Suite 200<br />
       Houston, TX 77030
     </div>
 
