--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -17,7 +17,7 @@ Description: Form for patient registration to gather account and demographic inf
   <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
-  <!-- ========================================= -->
+  <!-- ================= BANNER =================== -->
   <div id="banner">
     <div class="banner-left">
       <!-- Put uploaded logo in the same folder -->
@@ -29,7 +29,7 @@ Description: Form for patient registration to gather account and demographic inf
     </div>
   </div>
 
-  <!-- ===================== MAIN ===================== -->
+  <!-- =================== MAIN ==================== -->
   <div id="main">
     <h2>Patient Registration Form</h2>
     <p class="subtitle">Create a Gulfstone Medical patient portal account to sign up for your first appointment.</p>
@@ -169,7 +169,7 @@ Description: Form for patient registration to gather account and demographic inf
     </form>
   </div>
 
-  <!-- ===================== FOOTER ===================== -->
+  <!-- ================= FOOTER ====================== -->
   <div id="footer">
     <div class="footer-left">
       <strong>Gulfstone Medical</strong><br />
@@ -188,11 +188,9 @@ Description: Form for patient registration to gather account and demographic inf
       <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
     </div>
   </div>
-
-  <!-- End of patient-form.html -->
 </body>
+  <!-- ================== SCRIPT===================== -->
   <script>
-    // inline JS for dynamic date in banner
     function renderBannerDate() {
       const el = document.getElementById("todayDate");
       const now = new Date();
