--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -175,7 +175,7 @@ Description: Form for patient registration to gather account and demographic inf
     </div>
 
     <div class="footer-right">
-      <a href="https://X.com" target="_blank" rel="noopener">x</a> |
+      <a href="https://X.com" target="_blank" rel="noopener">X</a> |
       <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
     </div>
   </div>
