--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -4,7 +4,7 @@ Author: Jacob Richard Estrada
 Date created: 02/26/2026
 Date last edited: 02/27/2026
 Version: 2.2
-Description: Patient registration form to gather account, demographic, and basic health information.
+Description: Form for patient registration to gather account and demographic information.
 -->
 
 <!DOCTYPE html>
@@ -35,18 +35,19 @@ Description: Patient registration form to gather account, demographic, and basic
 
     <form action="thankyou.html">
       <table class="form-table">
-        <!-- Personal Information -->
-        <tr>
-          <td colspan="6"><strong>Personal Information</strong></td>
+
+        <!-- SECTION: Personal Information -->
+        <tr class="section-row">
+          <td colspan="6" class="section-title">Personal Information</td>
         </tr>
 
-        <!-- ONLY horizontal row: name -->
+        <!-- Name row (ONLY horizontal row) -->
         <tr>
           <td><label for="firstName">First Name (max 30)</label></td>
           <td><input type="text" id="firstName" name="firstName" maxlength="30" required /></td>
 
-          <td><label for="middleInitial">MI</label></td>
-          <td><input type="text" id="middleInitial" name="middleInitial" maxlength="1" /></td>
+          <td class="nowrap"><label for="middleInitial">MI</label></td>
+          <td class="mi-cell"><input type="text" id="middleInitial" name="middleInitial" maxlength="1" class="mi-input" /></td>
 
           <td><label for="lastName">Last Name (max 30)</label></td>
           <td><input type="text" id="lastName" name="lastName" maxlength="30" required /></td>
@@ -56,13 +57,12 @@ Description: Patient registration form to gather account, demographic, and basic
           <td><label for="dob">Date of Birth</label></td>
           <td colspan="5">
             <input type="date" id="dob" name="dob" />
-            <span class="hint">(MM/DD/YYYY)</span>
           </td>
         </tr>
 
-        <!-- Contact & Verification -->
-        <tr>
-          <td colspan="6"><strong>Contact &amp; Verification</strong></td>
+        <!-- SECTION: Contact & Verification -->
+        <tr class="section-row">
+          <td colspan="6" class="section-title">Contact &amp; Verification</td>
         </tr>
 
         <tr>
@@ -83,39 +83,30 @@ Description: Patient registration form to gather account, demographic, and basic
           <td><label for="ssn">Social Security</label></td>
           <td colspan="5">
             <input type="password" id="ssn" name="ssn" minlength="9" maxlength="11" placeholder="***-**-****" />
-            <span class="hint">(9–11 digits, masked)</span>
           </td>
         </tr>
 
-        <!-- Address -->
-        <tr>
-          <td colspan="6"><strong>Address</strong></td>
+        <!-- SECTION: Address -->
+        <tr class="section-row">
+          <td colspan="6" class="section-title">Address</td>
         </tr>
 
         <tr>
           <td><label for="addr1">Address Line 1 (max 30)</label></td>
-          <td colspan="5">
-            <input type="text" id="addr1" name="addr1" maxlength="30" required />
-          </td>
+          <td colspan="5"><input type="text" id="addr1" name="addr1" maxlength="30" required /></td>
         </tr>
 
         <tr>
           <td><label for="addr2">Address Line 2 (max 30)</label></td>
-          <td colspan="5">
-            <input type="text" id="addr2" name="addr2" maxlength="30" />
-          </td>
+          <td colspan="5"><input type="text" id="addr2" name="addr2" maxlength="30" /></td>
         </tr>
 
         <tr>
           <td><label for="city">City (max 30)</label></td>
-          <td colspan="5">
-            <input type="text" id="city" name="city" maxlength="30" required />
-          </td>
-        </tr>
+          <td><input type="text" id="city" name="city" maxlength="30" required /></td>
 
-        <tr>
           <td><label for="state">State</label></td>
-          <td colspan="5">
+          <td>
             <select id="state" name="state" required>
               <option value="">-- Select --</option>
               <option value="AL">Alabama</option><option value="AK">Alaska</option><option value="AZ">Arizona</option>
@@ -138,44 +129,32 @@ Description: Patient registration form to gather account, demographic, and basic
               <option value="WV">West Virginia</option><option value="WI">Wisconsin</option><option value="WY">Wyoming</option>
             </select>
           </td>
-        </tr>
 
-        <tr>
           <td><label for="zip">ZIP (5-10 digits)</label></td>
-          <td colspan="5">
-            <input type="text" id="zip" name="zip" minlength="5" maxlength="10" placeholder="77030" required />
-          </td>
+          <td><input type="text" id="zip" name="zip" minlength="5" maxlength="10" placeholder="77002" required /></td>
         </tr>
 
-        <!-- Account Creation -->
-        <tr>
-          <td colspan="6"><strong>Account Creation</strong></td>
+        <!-- SECTION: Account Creation -->
+        <tr class="section-row">
+          <td colspan="6" class="section-title">Account Creation</td>
         </tr>
 
         <tr>
           <td><label for="userId">Desired User ID (max 20)</label></td>
-          <td colspan="5">
-            <input type="text" id="userId" name="userId" maxlength="20" required />
-          </td>
+          <td colspan="5"><input type="text" id="userId" name="userId" maxlength="20" required /></td>
         </tr>
 
         <tr>
           <td><label for="pwd">Password</label></td>
-          <td colspan="5">
-            <input type="password" id="pwd" name="pwd" required />
-          </td>
-        </tr>
+          <td><input type="password" id="pwd" name="pwd" required /></td>
 
-        <tr>
           <td><label for="pwd2">Re-enter Password</label></td>
-          <td colspan="5">
-            <input type="password" id="pwd2" name="pwd2" required />
-          </td>
+          <td colspan="3"><input type="password" id="pwd2" name="pwd2" required /></td>
         </tr>
 
-        <!-- Health & Insurance -->
-        <tr>
-          <td colspan="6"><strong>Health &amp; Insurance Questions</strong></td>
+        <!-- SECTION: Health & Insurance -->
+        <tr class="section-row">
+          <td colspan="6" class="section-title">Health &amp; Insurance Questions</td>
         </tr>
 
         <tr>
@@ -197,9 +176,11 @@ Description: Patient registration form to gather account, demographic, and basic
         <tr>
           <td class="top"><label for="health">Current Wellness</label></td>
           <td colspan="5">
-            <span class="range-label">1</span>
-            <input type="range" id="health" name="health" min="1" max="10" value="5" class="wellness" />
-            <span class="range-label">10</span>
+            <div class="slider-row">
+              <span class="slider-num">1</span>
+              <input type="range" id="health" name="health" min="1" max="10" value="5" class="wellness-slider" />
+              <span class="slider-num">10</span>
+            </div>
           </td>
         </tr>
 
@@ -240,7 +221,7 @@ Description: Patient registration form to gather account, demographic, and basic
     </div>
 
     <div class="footer-center">
-      <button type="button" class="btn footer-btn" onclick="alert('Contact Us: support@GulfstoneMedical.com')">
+      <button type="button" class="btn footer-btn" onclick="alert('Contact Us: support@gulfstonemedical.com')">
         Contact Us
       </button>
     </div>
@@ -251,17 +232,14 @@ Description: Patient registration form to gather account, demographic, and basic
     </div>
   </div>
 
-  <!-- ================== SCRIPT ===================== -->
   <script>
     function renderBannerDate() {
-      var el = document.getElementById("todayDate");
-      var now = new Date();
-      var opts = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
+      const el = document.getElementById("todayDate");
+      const now = new Date();
+      const opts = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
       el.textContent = now.toLocaleDateString("en-US", opts);
     }
     window.addEventListener("DOMContentLoaded", renderBannerDate);
   </script>
-
-  <!-- End of patient-form.html -->
 </body>
 </html>
