--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -56,7 +56,7 @@ Description: Form for patient registration to gather account and demographic inf
         <tr>
           <td><label for="dob">Date of Birth</label></td>
           <td colspan="5">
-            <input type="date" id="dob" name="dob" />
+            <input type="text" id="dob" name="dob" placeholder="MM/DD/YYYY" />
           </td>
         </tr>
 
