--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -183,7 +183,14 @@ Description: Form for patient registration to gather account and demographic inf
             </div>
           </td>
         </tr>
-
+<tr>
+  <td class="top"><label>Gender</label></td>
+  <td colspan="5">
+    <label><input type="radio" name="gender" value="male" /> Male</label>
+    <label><input type="radio" name="gender" value="female" /> Female</label>
+    <label><input type="radio" name="gender" value="other" /> Other</label>
+  </td>
+</tr>
         <tr>
           <td class="top"><label>Past Illnesses (check all that apply)</label></td>
           <td colspan="5">
