--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -68,7 +68,7 @@ Description: Form for patient registration to gather account and demographic inf
         <tr>
           <td><label for="email">Email</label></td>
           <td colspan="5">
-            <input type="email" id="email" name="email" placeholder="name@gulfstonemedical.tld" required />
+            <input type="email" id="email" name="email" placeholder="name@gulfstonemedical.com" required />
           </td>
         </tr>
 
