--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -214,7 +214,7 @@ Description: Form for patient registration to gather account and demographic inf
 
         <tr>
           <td colspan="6" class="buttons">
-            <input type="reset" value="CLEAR AND START OVER" class="btn secondary" />
+            <input type="reset" value="Clear and Start Over" class="btn secondary" />
             <input type="submit" value="Submit" class="btn primary" />
           </td>
         </tr>
