--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -42,7 +42,7 @@ Description: Form for patient registration to gather account and demographic inf
           <tr>
             <td><label for="firstName">First Name (max 30)</label></td>
             <td><input type="text" id="firstName" name="firstName" maxlength="30" required /></td>
-          <td class="td-right"><label for="middleInitial">MI</label></td>
+          <td class="center-cell"><label for="middleInitial">MI</label></td>
             <td class="td-left">
             <input type="text" id="middleInitial" name="middleInitial" maxlength="1" class="mi-box" />
           </td>
