--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -94,7 +94,7 @@ Description: Form for patient registration to gather account and demographic inf
         <tr>
           <td><label for="city">City (max 30)</label></td>
           <td><input type="text" id="city" name="city" maxlength="30" required /></td>
-          <td><label for="state">State</label></td>
+         <td style="text-align:center;"><label for="state">State</label></td>
            <td class="center-cell">
             <select id="state" name="state" required>
               <option value="">-- Select --</option>
