--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -238,4 +238,4 @@ Description: Form for patient registration to gather account and demographic inf
     window.addEventListener("DOMContentLoaded", renderBannerDate);
   </script>
 </body>
-</html>"
+</html>
