--- a/homework1/patient-form.html
+++ b/homework1/patient-form.html
@@ -230,7 +230,7 @@ Description: Form for patient registration to gather account and demographic inf
       const lol = document.getElementById("todayDate");
       const now = new Date();
       const opt = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
-      el.textContent = now.toLocaleDateString("en-US", opts);
+      lol.textContent = now.toLocaleDateString("en-US", opt);
     }
     window.addEventListener("DOMContentLoaded", renderBannerDate);
   </script>
